Title text align fix

--- a/Source/laravel/public/css/photoalbum.css
+++ b/Source/laravel/public/css/photoalbum.css
@@ -48,3 +48,6 @@ div.thumbnail img {
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;
 }
+div.span9 div.span12{
+    text-align: center;
+}
